# december-aibook

./: .gitignore  README.md  deploy.sh  package.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .env  README.md  database.py  gemini_chat.py  main.py  models.py  populate_db.py  pyproject.toml  requirements.txt  start.sh  test_qdrant.py
frontend/my-aibook/: .eslintrc.js  .prettierrc  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
frontend/my-aibook/docs/: book-summary.md  digital-twins.md  intro.md  ros2-basics.md
frontend/my-aibook/docs/module-1/: 1.1-ros2-architecture-dds.md  1.2-nodes-topics-services-actions.md  (+2 more)
frontend/my-aibook/scripts/: process-docs.js
frontend/my-aibook/static/: book-content.json
history/prompts/constitution/: 1-create-embodied-ai-systems.constitution.prompt.md
history/prompts/embodied-ai-book/: 001-generate-tasks-for-embodied-ai-systems-book.tasks.prompt.md  002-implement-embodied-ai-systems-book.implement.prompt.md  2-create-embodied-ai-systems.spec.prompt.md
history/prompts/fix-recursive-embedding/: 001-create-fix-recursive-embedding-spec.spec.prompt.md
history/prompts/main/: 3-embodied-ai-book-plan.plan.prompt.md
specs/001-embodied-ai-book/: spec.md
specs/001-embodied-ai-book/checklists/: requirements.md
specs/002-fix-recursive-embedding/: data-model.md  plan.md  research.md  spec.md
specs/002-fix-recursive-embedding/checklists/: requirements.md
specs/main/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/main/contracts/: openapi.yaml
(+19 files in other folders)
